# neuralgcm-torch

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml
dinosaur-torch/: NOTICE  README.md  conftest.py  pyproject.toml
dinosaur-torch/dinosaur_torch/: __init__.py  associated_legendre.py  coordinate_systems.py  filtering.py  fourier.py  horizontal_interpolation.py  primitive_equations.py  pytree.py  radiation.py  scales.py  sigma_coordinates.py  spherical_harmonic.py  time_integration.py  units.py  vertical_interpolation.py  xarray_utils.py
dinosaur-torch/tests/: test_associated_legendre.py  test_filtering.py  test_fourier.py  test_horizontal_interpolation.py  test_primitive_equations.py  test_radiation.py  test_scales.py  test_sigma_coordinates.py  test_spherical_harmonic.py  test_time_integration.py  test_vertical_interpolation.py  test_xarray_utils.py
neuralgcm-torch/: NOTICE  README.md  pyproject.toml
neuralgcm-torch/neuralgcm_torch/: __init__.py  api.py  checkpoint.py  correctors.py  data.py  decoders.py  diagnostics.py  distributed.py  embeddings.py  encoders.py  ensembles.py  features.py  filters.py  forcings.py  layers.py  mappings.py  model_builder.py  model_states.py  models.py  orographies.py  parameterizations.py  pretrained.py  steps.py  stochastic.py  towers.py  training.py  transforms.py
neuralgcm-torch/notebooks/: .gitignore  README.md  _config.yml  _toc.yml  checkpoint_modifications.ipynb  climate_stability.ipynb  data_preparation.ipynb  deepdive_into_models.ipynb  forecast_0_7_deg.ipynb  forecast_1_4_deg.ipynb  forecast_ens_1_4_deg.ipynb  forecast_evap_2_8_deg.ipynb  forecast_precip_2_8_deg.ipynb  forecast_quickstart.ipynb  installation.md  intro.md  requirements.txt
neuralgcm-torch/tools/: benchmark.py  fetch_checkpoints.py  finetune_era5.py
