[build-system]
requires = ["setuptools>=77"]  # PEP 639 SPDX license expression + license-files
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuralgcm_torch"]
package-data = {neuralgcm_torch = ["data/*"]}

[project]
name = "neuralgcm-torch"
version = "0.1.0"
description = "Idiomatic-PyTorch rewrite of NeuralGCM: nn.Module models, converted checkpoints 🌍⚡"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Gabriele Franch", email = "franch@fbk.eu" }]
keywords = [
    "climate", "weather", "atmosphere", "forecasting", "pytorch",
    "neural-gcm", "spectral-dynamical-core", "differentiable-physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "dinosaur-torch",
    "torch",
    "numpy",
    "pandas",
    "xarray",
]

[project.optional-dependencies]
tests = [
    "pytest",
]
# `pretrained.fetch_checkpoint` and the tools/{fetch,upload}_checkpoints.py
# scripts that download/publish converted checkpoints on the Hugging Face Hub.
hub = [
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/DSIP-FBK/neuralgcm-torch"
Repository = "https://github.com/DSIP-FBK/neuralgcm-torch"
Issues = "https://github.com/DSIP-FBK/neuralgcm-torch/issues"

[tool.uv.sources]
dinosaur-torch = { workspace = true }
